[package]
name = "cidr-utils"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
authors = ["yabowarcherio <yabowarcher8590@gmail.com>"]
description = "Parse, enumerate, and test IPv4/IPv6 CIDR blocks and address ranges — pure math, no networking, library + CLI."
documentation = "https://docs.rs/cidr-utils"
repository = "https://github.com/yabowarcherio/cidr-utils"
homepage = "https://github.com/yabowarcherio/cidr-utils"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cidr", "ip", "subnet", "ipv4", "ipv6"]
categories = ["network-programming", "command-line-utilities", "parsing"]
exclude = [
    ".github/",
    "benches/",
    "deny.toml",
]

[lib]
name = "cidr_utils"
path = "src/lib.rs"

[[bin]]
name = "cidr-utils"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
# The CLI binary. Disable for a slim library-only dependency.
cli = ["dep:clap", "dep:serde_json"]
# Derive serde traits on the public address/range types.
serde = ["dep:serde"]

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
serde_json = "1.0"

[[bench]]
name = "parse"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
